<resources>
    <string name="app_name">EscapeRoomApp</string>
    <string name="castledragon">CastleDragon</string>
    <string name="escape_n_room">Escape\nRoom</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="play">Play</string>
    <string name="shop">Shop</string>
    <string name="inventory">Inventory</string>
    <string name="imageoctocat">imageOctocat</string>
    <string name="imagebubble">imageBubble</string>
</resources>
