<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="61dp">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/castledragon"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/castle_main" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/escape_n_room"
        android:textAlignment="center"
        android:textColor="#D11B59"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageView
        android:id="@+id/imageOctocat"
        android:layout_width="103dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imageoctocat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/knight" />

    <ImageView
        android:id="@+id/imageBubble"
        android:layout_width="229dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imagebubble"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInventory"
        app:layout_constraintVertical_bias="0.07999998"
        app:srcCompat="@drawable/bubble_bmp" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="105dp"
        android:layout_height="26dp"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBubble"
        app:layout_constraintEnd_toEndOf="@+id/imageBubble"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="@+id/imageBubble"
        app:layout_constraintTop_toTopOf="@+id/imageBubble"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_play"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.43" />

    <Button
        android:id="@+id/btnShop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_login"
        android:text="@string/shop"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnInventory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_darkblue"
        android:text="@string/inventory"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnShop"
        app:layout_constraintStart_toStartOf="@+id/btnShop"
        app:layout_constraintTop_toBottomOf="@+id/btnShop" />

</android.support.constraint.ConstraintLayout>